--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,6 +3,123 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
 
+$blue: #66afe9;
+$border: #eee;
+$button-dark: $border;
+
+@mixin center {
+  top: 50%;
+  transform: translateY(-50%);
+  position: fixed;
+  left: 0;
+  z-index: 3000;
+  width: 100%;
+  padding: 30px;
+}
+
+button, a, input {
+  box-shadow: none !important;
+  border-radius: 0 !important;
+}
+.darken {
+  position: fixed;
+  z-index: 10000;
+  display: none;
+  opacity: 0;
+  top: 51px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.8);
+  transition-duration: 0.15s;
+  &.open {
+    opacity: 1;
+  }
+}
+.btn-add {
+  position: fixed;
+  top: 0;
+  right:0;
+  padding: 10px 16px;
+  height: 50px;
+  font-size: 30px;
+  line-height: 30px;
+  z-index: 2000;
+  font-weight: 100;
+  color: inherit;
+  &:active {
+    background-color: $button-dark;
+  }
+}
+.menu {
+  position: fixed;
+  z-index: 10000;
+  top: 51px;
+  bottom: 0px;
+  transform: translate3d(-100%, 0, 0);
+  left: 0;
+  width: 80%;
+  background-color: white;
+  transition-duration: 0.15s;
+  &.open {
+    transform: translate3d(0, 0, 0);
+  }
+  li {
+    border-bottom: 1px solid $border;
+    a {
+      color: inherit;
+    }
+  }
+}
+h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.rows {
+  .row {
+    padding: 10px;
+    border-bottom: 1px solid $border;
+    display: block;
+    color: inherit;
+    .text {
+      font-size: 1em;
+    }
+    .title {
+      font-weight: bold;
+    }
+    &.click:before {
+      content: "›";
+      font-size: 40px;
+      line-height: 34px;
+      float: right;
+    }
+  }
+}
+
+body > .container, body, html {
+  height: 100%;
+}
+.special-center {
+  @include center;
+  .btn + .btn {
+    margin-top: 20px;
+  }
+}
+.bill-split {
+  @include center;
+  h1 {
+    text-align: center;
+    font-weight: 200;
+    font-size: 40pt;
+    color: $blue;
+    margin-bottom: 50px;
+  }
+  input {
+    margin-bottom: 20px
+  }
+
+}
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -10,9 +127,21 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
   padding: 0.2em 0;
 }
 
+.navbar-toggle {
+  float: left;
+  margin: 0;
+  margin-right: -15px;
+  margin-left: -8px;
+  border: 0;
+  height: 50px;
+  padding: 0;
+  border-radius: 0;
+  padding-right: 20px;
+}
+
 /* Space out content a bit */
 body {
-  padding-top: 20px;
+  padding-top: 51px;
   padding-bottom: 20px;
 }
 
