--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,7 +17,7 @@ $button-dark: $border;
   padding: 30px;
 }
 
-button, a, input {
+button, a, input, .input-group-addon {
   box-shadow: none !important;
   border-radius: 0 !important;
 }
@@ -36,20 +36,32 @@ button, a, input {
     opacity: 1;
   }
 }
-.btn-add {
+.btn-top {
   position: fixed;
   top: 0;
   right:0;
-  padding: 10px 16px;
-  height: 50px;
-  font-size: 30px;
-  line-height: 30px;
   z-index: 2000;
-  font-weight: 100;
-  color: inherit;
-  &:active {
-    background-color: $button-dark;
+  padding: 10px;
+  height: 50px;
+  .btn-add {
+    padding: 10px 16px;
+    line-height: 30px;
+    margin-right: -10px;
+    height: 50px;
+    font-size: 30px;
+    font-weight: 100;
+    color: inherit;
+    &:hover {
+      color: inherit;
+      text-decoration: none;
+    }
+    &:active {
+      background-color: $button-dark;
+    }
   }
+}
+a {
+  cursor: pointer;
 }
 .menu {
   position: fixed;
@@ -75,23 +87,48 @@ h2 {
   text-align: center;
   margin-bottom: 20px;
 }
+error {
+  display: block;
+  text-align: center;
+  color: red;
+  font-size: 1.2em;
+}
 .rows {
   .row {
     padding: 10px;
     border-bottom: 1px solid $border;
     display: block;
     color: inherit;
+    position: relative;
+    min-height: 59px;
+    &.category {
+      min-height: 0;
+      padding: 5px 10px;
+      font-weight: bold;
+      background-color: #F0F0F0;
+      border-bottom: 1px solid #ddd;
+    }
     .text {
       font-size: 1em;
     }
     .title {
       font-weight: bold;
     }
+    &:hover {
+      text-decoration: none;
+    }
     &.click:before {
       content: "›";
       font-size: 40px;
       line-height: 34px;
       float: right;
+    }
+    .right {
+      padding: 10px;
+      position: absolute;
+      line-height: 39px;
+      right: 0;
+      top: 0;
     }
   }
 }
