--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,7 +1,11 @@
-<a href="#/add" class="btn-add">
-+
-</a>
+<div class="btn-top">
+  <a href="#/add" class="btn-add">
+  +
+  </a>
+</div>
 <div class="rows">
+  <a class="row category">Payment Requests</a>
+  <a class="row category">My Bills</a>
   <a class="row click" ng-repeat="bill in bills" href="#/bill/{{bill.id}}">
     <div class="title">{{bill.name}}</div>
     <div class="text">Received ${{bill.paid}} of ${{bill.total}}</div>
