--- a/app/views/add.html
+++ b/app/views/add.html
@@ -6,7 +6,7 @@
     Receipt
     <i class="fa fa-camera-retro"></i>
   </a>
-  <a class="btn btn-default btn-block btn-success btn-lg" href="#/add-amount">
+  <a class="btn btn-default btn-block btn-success btn-lg" href="#/bill/new">
     Amount
     <i class="fa fa-dollar"></i>
   </a>
