--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,6 +17,7 @@ $button-dark: $border;
   padding: 30px;
 }
 
+
 button, a, input, .input-group-addon {
   box-shadow: none !important;
   border-radius: 0 !important;
@@ -43,6 +44,18 @@ button, a, input, .input-group-addon {
   z-index: 2000;
   padding: 10px;
   height: 50px;
+  .dropdown.open {
+    .btn-add {
+      background-color: $button-dark;
+    }
+    .dropdown-menu {
+      margin-right: -10px;
+      margin-top: 10px;
+      left: auto;
+      right: 0;
+      border-radius: 0;
+    }
+  }
   .btn-add {
     padding: 10px 16px;
     line-height: 30px;
