--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,6 +2,7 @@
   <a href="#/add" class="btn-add">
   +
   </a>
+  <a href="#/withdraw" class="btn-nav">Withdraw (${{balance}})</a>
 </div>
 <div class="rows">
   <a class="row category">Payment Requests</a>
