--- a/app/views/bill.html
+++ b/app/views/bill.html
@@ -42,7 +42,7 @@
   </div>
 </div>
 
-<iframe ng-if="bill.location"
+<iframe class="map" ng-if="bill.location"
   width="600"
   height="200"
   frameborder="0" style="border:0"
