--- a/app/views/login.html
+++ b/app/views/login.html
@@ -12,10 +12,10 @@
     <label>Password</label>
     <input type="password" class="form-control" placeholder="Password" ng-model="password">
     <span ng-if="isSignup">
-      <button type="submit" class="btn btn-primary" ng-click="register()">Register</button> or <button class="btn btn-default" ng-click="toggleLogin()">Login</button>
+      <button type="submit" class="btn btn-primary btn-lg btn-block" ng-click="register()">Register</button><center> or </center><button class="btn btn-default btn-lg btn-block" ng-click="toggleLogin()">Login</button>
     </span>
     <span ng-if="isSignup == false">
-      <button type="submit" class="btn btn-primary" ng-click="login()">Login</button> or <button class="btn btn-default" ng-click="toggleLogin()">Register</button>
+      <button type="submit" class="btn btn-primary btn-lg btn-block" ng-click="login()">Login</button><center> or </center><button class="btn btn-default btn-lg btn-block" ng-click="toggleLogin()">Register</button>
     </span>
   </form>
 
